# lauschi

./: .env.app.example  .env.example  .gitattributes  .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agents.toml  analysis_options.yaml  build.yaml  codemagic.yaml  mise.toml  pubspec.yaml  pyproject.toml  renovate.json
tools/: pyproject.toml  review_sheet.py
tools/scripts/: backfill_content_type.py  migrate_legacy_curations.py
tools/src/lauschi_catalog/: __init__.py  _mistral_patch.py  _opencode.py  agent_deps.py  agent_hooks.py  agent_tools.py  cli.py  rate_limit.py  retry.py  run.py  search.py
tools/src/lauschi_catalog/catalog/: __init__.py  add_ops.py  album_ops.py  analysis.py  apply_ops.py  audit_ops.py  canonical.py  curate_ops.py  deleted.py  discover_ops.py  facts.py  io.py  lifecycle.py  lint_ops.py  loader.py  matcher.py  merge_ops.py  models.py  paths.py  prompt.py  providers_init.py  reconcile.py  series_ops.py  validate_ops.py
tools/src/lauschi_catalog/commands/: add.py  (+18 more)
tools/tests/: conftest.py  test_add_album_validation.py  test_add_deleted_guard.py  test_agent_hooks.py  test_agent_tools.py  test_agent_wiring.py  test_album_art.py  test_album_ops.py  test_analyze_series.py  test_api_endpoints.py  test_apple_music_artist_albums.py  test_apple_music_retry_after.py  test_apply.py  test_assemble_review.py  test_audit.py  test_build_prompt.py  test_canonical.py  test_catalog_io.py  test_catalog_paths.py  test_cover_proxy.py  test_curate_helpers.py  test_dedupe_albums.py  test_delete.py  test_discover_prune.py  test_discovery_album_dict.py  test_edit_exclude_reason.py  test_error_log_escaping.py  test_facts_merge.py  test_facts_round_trip.py  test_flash_messages.py  test_job_runner.py  test_lifecycle.py  test_lint.py  test_lint_regression.py  test_log_summary.py  test_matcher.py  test_merge_ops.py  test_ollama_model.py  test_openai_compat_model.py  test_opencode_model.py  (+21 more)
tools/tests/evals/: cases.py  evaluators.py  run_evals.py  task.py
(+752 files in other folders)
