[project]
name = "lauschi-catalog"
version = "0.1.0"
description = "Catalog management tools for lauschi (multi-provider Hörspiel catalog)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "diskcache>=5.6",
    "requests>=2.31",
    "ruamel.yaml>=0.18",
    "rich>=13.7",
    "PyJWT[crypto]>=2.8",
    "pydantic-ai-slim[openai]>=1.105.0",
]

[project.optional-dependencies]
ai = [
    "pydantic-ai>=1.105.0",
    "pydantic>=2.0",
]
web = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.28",
    "filelock>=3.18",
    "itsdangerous>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "basedpyright>=1.30",
    "djlint>=1.36",
]

[project.scripts]
lauschi-catalog = "lauschi_catalog.cli:cli"
lauschi-catalog-web = "lauschi_catalog.web.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lauschi_catalog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = ["tests", ".venv", "src/lauschi_catalog_web"]
reportMissingTypeStubs = false
